--- a/sim1.html
+++ b/sim1.html
@@ -159,10 +159,13 @@
 <div class='container'>
 <p class="content-blockquote "> 
 “Temos um código promocional somente para este primeiro acesso. Você aceita este desconto?”  
-</p><center><a style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK89AC' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='https://go.perfectpay.com.br/PPU38CK89AC' class='btn btn-warning btn-lg custom-url'>Não</a></center>
+</p><center><a style='margin-right:15px' href='pv.html' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='pv.html' class='btn btn-warning btn-lg custom-url'>Não</a></center>
 </div>
 </div>
 
+<!-- link de afiliado
+https://go.perfectpay.com.br/PPU38CK89AC
+-->
 
 </body>
 
@@ -181,7 +184,7 @@ partes.forEach(function (parte) {
 var url = data['src'];
 
      $(document).ready(function () {
-        $('.custom-url').attr('href', "https://go.perfectpay.com.br/PPU38CK89AC?" + query);
+        $('.custom-url').attr('href', "pv.html?" + query);
 });
 
   </script>
